--- a/SpotifyOpgaveCore/Views/Rooms/CreateSong.cshtml
+++ b/SpotifyOpgaveCore/Views/Rooms/CreateSong.cshtml
@@ -4,11 +4,11 @@
         $("a[name=remove]").on("click", function () {
             $.ajax(
                 {
-                    type: "POST", //HTTP POST Method
-                    url: "@Url.Action("RemoveSong","Rooms")", // Controller/View
-                    data: { //Passing data
+                    type: "POST",
+                    url: "@Url.Action("RemoveSong","Rooms")",
+                    data: { 
                         songId: $(this).data("index"),
-                        id: $(this).data("index2"),//Reading text box values using Jquery
+                        id: $(this).data("index2"),
                     },
                     success: function (data) {
                         $("#songList").html(data);
@@ -21,11 +21,11 @@
         $("a[name=upvote]").on("click", function () {
             $.ajax(
                 {
-                    type: "POST", //HTTP POST Method
-                    url: "@Url.Action("Upvote","Rooms")", // Controller/View
-                    data: { //Passing data
+                    type: "POST", 
+                    url: "@Url.Action("Upvote","Rooms")", 
+                    data: { 
                         songId: $(this).data("index"),
-                        id: $(this).data("index2"),//Reading text box values using Jquery
+                        id: $(this).data("index2"),
                     },
                     success: function (data) {
                         $("#songList").html(data);
@@ -38,11 +38,11 @@
         $("a[name=downvote]").on("click", function () {
             $.ajax(
                 {
-                    type: "POST", //HTTP POST Method
-                    url: "@Url.Action("Downvote","Rooms")", // Controller/View
-                    data: { //Passing data
+                    type: "POST", 
+                    url: "@Url.Action("Downvote","Rooms")",
+                    data: { 
                         songId: $(this).data("index"),
-                        id: $(this).data("index2"),//Reading text box values using Jquery
+                        id: $(this).data("index2"),
                     },
                     success: function (data) {
                         $("#songList").html(data);
